--- a/MainProject/MainProject.csproj
+++ b/MainProject/MainProject.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Store.cs" />
     <Compile Include="Department.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
